add trained model api

--- a/elastic_ml.ipynb
+++ b/elastic_ml.ipynb
@@ -658,14 +658,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_37818/3196675872.py:2: DeprecationWarning: Importing from the 'elasticsearch.client' module is deprecated. Instead use 'elasticsearch' module for importing the client.\n",
+      "/tmp/ipykernel_13119/3196675872.py:2: DeprecationWarning: Importing from the 'elasticsearch.client' module is deprecated. Instead use 'elasticsearch' module for importing the client.\n",
       "  from elasticsearch.client import MlClient\n"
      ]
     }
@@ -884,55 +884,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'model_id': '.elser_model_2_linux-x86_64',\n",
-       " 'model_type': 'pytorch',\n",
-       " 'model_package': {'packaged_model_id': 'elser_model_2_linux-x86_64',\n",
-       "  'model_repository': 'https://ml-models.elastic.co',\n",
-       "  'minimum_version': '11.0.0',\n",
-       "  'size': 274756282,\n",
-       "  'sha256': 'be69211494bf9cdc57a7aa0ee06814fcccf999407237816c9d9f0963858e2a61',\n",
-       "  'metadata': {},\n",
-       "  'tags': [],\n",
-       "  'vocabulary_file': 'elser_model_2_linux-x86_64.vocab.json',\n",
-       "  'platform_architecture': 'linux-x86_64'},\n",
-       " 'platform_architecture': 'linux-x86_64',\n",
-       " 'created_by': 'api_user',\n",
-       " 'version': '12.0.0',\n",
-       " 'create_time': 1722097647623,\n",
-       " 'model_size_bytes': 0,\n",
-       " 'estimated_operations': 0,\n",
-       " 'license_level': 'platinum',\n",
-       " 'description': 'Elastic Learned Sparse EncodeR v2 optimized for linux-x86_64',\n",
-       " 'tags': ['elastic'],\n",
-       " 'metadata': {},\n",
-       " 'input': {'field_names': ['text_field']},\n",
-       " 'inference_config': {'text_expansion': {'vocabulary': {'index': '.ml-inference-native-000002'},\n",
-       "   'tokenization': {'bert': {'do_lower_case': True,\n",
-       "     'with_special_tokens': True,\n",
-       "     'max_sequence_length': 512,\n",
-       "     'truncate': 'first',\n",
-       "     'span': -1}}}},\n",
-       " 'location': {'index': {'name': '.ml-inference-native-000002'}}}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Retrieve trained models\n",
-    "ml_client.get_trained_models()[\"trained_model_configs\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -1120,6 +1071,150 @@
    "source": [
     "# Delete a job\n",
     "ml_client.delete_job(job_id = \"test-job-log-entry-rate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'model_id': 'lang_ident_model_1',\n",
+       "  'model_type': 'lang_ident',\n",
+       "  'created_by': '_xpack',\n",
+       "  'version': '7.6.0',\n",
+       "  'create_time': 1575548914594,\n",
+       "  'model_size_bytes': 1053992,\n",
+       "  'estimated_operations': 39629,\n",
+       "  'license_level': 'basic',\n",
+       "  'description': 'Model used for identifying language from arbitrary input text.',\n",
+       "  'tags': ['lang_ident', 'prepackaged'],\n",
+       "  'input': {'field_names': ['text']},\n",
+       "  'inference_config': {'classification': {'num_top_classes': 0,\n",
+       "    'top_classes_results_field': 'top_classes',\n",
+       "    'results_field': 'predicted_value',\n",
+       "    'num_top_feature_importance_values': 0,\n",
+       "    'prediction_field_type': 'string'}}}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retrieve trained models\n",
+    "ml_client.get_trained_models()[\"trained_model_configs\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'model_id': '.elser_model_2_linux-x86_64', 'model_type': 'pytorch', 'model_package': {'packaged_model_id': 'elser_model_2_linux-x86_64', 'model_repository': 'https://ml-models.elastic.co', 'minimum_version': '11.0.0', 'size': 274756282, 'sha256': 'be69211494bf9cdc57a7aa0ee06814fcccf999407237816c9d9f0963858e2a61', 'metadata': {}, 'tags': [], 'vocabulary_file': 'elser_model_2_linux-x86_64.vocab.json', 'platform_architecture': 'linux-x86_64'}, 'platform_architecture': 'linux-x86_64', 'created_by': 'api_user', 'version': '12.0.0', 'create_time': 1722265934143, 'model_size_bytes': 0, 'estimated_operations': 0, 'license_level': 'platinum', 'description': 'Elastic Learned Sparse EncodeR v2 optimized for linux-x86_64', 'tags': ['elastic'], 'metadata': {}, 'input': {'field_names': ['text_field']}, 'inference_config': {'text_expansion': {'vocabulary': {'index': '.ml-inference-native-000002'}, 'tokenization': {'bert': {'do_lower_case': True, 'with_special_tokens': True, 'max_sequence_length': 512, 'truncate': 'first', 'span': -1}}}}, 'location': {'index': {'name': '.ml-inference-native-000002'}}})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create trained model, use existing trained model for demo\n",
+    "ml_client.put_trained_model(\n",
+    "    model_id = \".elser_model_2_linux-x86_64\",\n",
+    "    input = {'field_names': ['text_field']},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'assignment': {'task_parameters': {'model_id': '.elser_model_2_linux-x86_64', 'deployment_id': '.elser_model_2_linux-x86_64', 'model_bytes': 274756282, 'threads_per_allocation': 1, 'number_of_allocations': 1, 'queue_capacity': 1024, 'cache_size': '274756282b', 'priority': 'normal', 'per_deployment_memory_bytes': 0, 'per_allocation_memory_bytes': 0}, 'routing_table': {'3SkrpVMbT3-LPcxr0iYypA': {'current_allocations': 1, 'target_allocations': 1, 'routing_state': 'started', 'reason': ''}}, 'assignment_state': 'started', 'start_time': '2024-07-29T15:13:56.409373677Z', 'max_assigned_allocations': 1}})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Deploy trained model\n",
+    "ml_client.start_trained_model_deployment(model_id = \".elser_model_2_linux-x86_64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'inference_results': [{'predicted_value': {'bye': 2.4914753, 'goodbye': 1.7867528, '!': 1.4393035, 'welcome': 0.9759852, 'knockout': 0.8077862, 'late': 0.64506036, 'farewell': 0.5744644, 'halle': 0.5654327, 'cancel': 0.47390866, 'exit': 0.40180466, 'distraction': 0.3832247, 'apology': 0.3733448, 'crush': 0.34912214, 'vote': 0.3364368, 'doubt': 0.32602018, 'message': 0.32279435, 'rude': 0.31470814, 'ty': 0.3088524, 'anger': 0.29807547, 'congratulations': 0.27550116, 'thanks': 0.27489352, 'veto': 0.21770735, 'fear': 0.2159868, 'kiss': 0.21583475, 'practice': 0.1746056, 'interview': 0.17304495, 'deal': 0.16786732, 'sorry': 0.16582713, 'question': 0.16121708, 'contestant': 0.15988849, 'patience': 0.15421624, 'jenny': 0.15182613, 'delay': 0.14731267, 'talk': 0.13661774, 'moment': 0.11442173, 'victory': 0.08496171, 'grammar': 0.07447767, 'word': 0.071585, 'proposal': 0.057338476, 'applause': 0.04004838, 'comeback': 0.035725642, 'sympathy': 0.028779443, 'formal': 0.0284969, 'confidence': 0.011971648, 'silence': 0.011805196}}]})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Infer trained model\n",
+    "ml_client.infer_trained_model(model_id = \".elser_model_2_linux-x86_64\", docs = [{\"text_field\": \"bye!\"}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'stopped': True})"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Stop deployed model\n",
+    "ml_client.stop_trained_model_deployment(model_id = \".elser_model_2_linux-x86_64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True})"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Delete trained models\n",
+    "ml_client.delete_trained_model(model_id = \".elser_model_2_linux-x86_64\")"
    ]
   }
  ],
