--- a/elastic_ml.ipynb
+++ b/elastic_ml.ipynb
@@ -1251,6 +1251,20 @@
     "# Delete trained models\n",
     "ml_client.delete_trained_model(model_id = \".elser_model_2_linux-x86_64\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Custom Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
